<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/backgroud">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_margin="15dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="152dp" android:id="@+id/lbl_cuestion" android:text="@string/lbl_title"
                android:gravity="center_horizontal|center_vertical" android:textSize="40sp"
                android:textColor="@color/black" android:fontFamily="@font/b612_mono" android:textStyle="bold"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="215dp"/>
        <TextView
                android:text="@string/txt_in_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:textColor="@color/black"
                android:layout_marginStart="1dp" android:fontFamily="@font/b612_mono" android:textStyle="bold"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_name" android:background="@drawable/txt_border"
                android:textColor="@color/black" android:textStyle="bold"
                android:fontFamily="@font/b612_mono" android:paddingStart="7dp"/>
        <TextView
                android:text="@string/txt_in_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="@color/black"
                android:layout_marginTop="10dp" android:layout_marginStart="1dp" android:fontFamily="@font/b612_mono"
                android:textStyle="bold"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:ems="10"
                android:id="@+id/txt_age" android:background="@drawable/txt_border" android:textColor="@color/black"
                android:textStyle="bold" android:fontFamily="@font/b612_mono" android:paddingStart="7dp"
        />
        <Space
                android:layout_width="match_parent"
                android:layout_height="85dp"/>
        <Button
                android:text="@string/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="88dp" android:id="@+id/btn_save" android:fontFamily="@font/b612_mono"
                android:textStyle="bold" android:textColor="@color/white" android:background="@color/black"/>
    </LinearLayout>
</RelativeLayout>