<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Response" android:background="@color/backgroud">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:padding="15dp"
            android:background="@color/backgroud" app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/lbl_constant"
                android:gravity="center_horizontal|center_vertical" android:textSize="48sp"
                android:textColor="@color/black" android:fontFamily="@font/b612_mono" android:textStyle="bold"
                tools:text="@string/lbl_yourAge" android:visibility="visible"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/lbl_ageResult"
                android:gravity="bottom|center_horizontal" android:textSize="110sp"
                android:textColor="@color/black" android:fontFamily="@font/b612_mono" android:textStyle="bold"
        />
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="331dp" android:background="@drawable/txt_border" android:padding="10dp"
                android:layout_marginTop="15dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="@color/white">
                <TextView
                        android:text="@string/lbl_tips"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="30sp"
                        android:fontFamily="@font/b612_mono" android:textStyle="bold" android:textColor="@color/black"/>
                <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pgb_wait" android:visibility="gone"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/lbl_responseGPT"
                        android:textStyle="bold" android:textColor="@color/black"
                        android:fontFamily="@font/b612_mono" android:textSize="16sp"/>
            </LinearLayout>
        </ScrollView>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/btn_back"
                    android:layout_width="match_parent"
                    android:layout_height="88dp" android:id="@+id/btn_back" android:fontFamily="@font/b612_mono"
                    android:textStyle="bold" android:textSize="15dp" android:textColor="@color/white"
                    android:layout_weight="1" android:layout_marginEnd="5dp" android:background="@color/black"
                    android:layout_marginTop="5dp"/>
            <Button
                    android:text="@string/btn_tip"
                    android:layout_width="match_parent"
                    android:layout_height="88dp" android:id="@+id/btn_gpt" android:fontFamily="@font/b612_mono"
                    android:textStyle="bold" android:textSize="15dp" android:textColor="@color/white"
                    android:layout_weight="1" android:layout_marginStart="5dp" android:background="@color/black"
                    android:layout_marginTop="5dp"/>
        </TableRow>

    </LinearLayout>
</RelativeLayout>